--- a/classification.html
+++ b/classification.html
@@ -15,16 +15,16 @@
         <a href="index.html" style="font-size: 246%; text-decoration: underline;">Ten Stages of Genocide</a>
         <br>
         <div>
-            <a href="stages/classification.html">Classification</a>
-            <a href="stages/symbolisation.html">Symbolisation</a>
-            <a href="stages/discrimination.html">Discrimination</a>
-            <a href="STAGEdehumanisation.html">Dehumanisation</a>
-            <a href="STAGEorganisation.html">Organisation</a>
-            <a href="STAGEpolarisation.html">Polarisation</a>
-            <a href="STAGEpreparation.html">Preparation</a>
-            <a href="STAGEpersecution.html">Persecution</a>
-            <a href="STAGEextermination.html">Extermination</a>
-            <a href="STAGEdenial.html">Denial</a>
+            <a href="classification.html">Classification</a>
+            <a href="symbolisation.html">Symbolisation</a>
+            <a href="discrimination.html">Discrimination</a>
+            <a href="dehumanisation.html">Dehumanisation</a>
+            <a href="organisation.html">Organisation</a>
+            <a href="polarisation.html">Polarisation</a>
+            <a href="preparation.html">Preparation</a>
+            <a href="persecution.html">Persecution</a>
+            <a href="extermination.html">Extermination</a>
+            <a href="denial.html">Denial</a>
         </div>
     </nav>
     <br>
