--- a/preparation.html
+++ b/preparation.html
@@ -47,8 +47,8 @@
             <img src="10sog.jpg" class="representationImg">
         </div>
         <div class="examples">
-            <p>The Holocaust, They built concentration camps like Auschwitz.
-            <p>e
+            <p>In the Holocaust They built concentration camps like Auschwitz.
+            <p>In 
             <p>e
         </div>
     </main>
