--- a/classification.html
+++ b/classification.html
@@ -31,7 +31,7 @@
     <br>
     <br>
     <main>
-        <h1 style="text-align: center;">[Stage Name]</h1>
+        <h1 style="text-align: center;">Classification</h1>
         <div class="definition">
             <p>Classification, the foundational stage of genocide, involves the societal construction of distinct groups, fostering an "us versus them" mentality. This division is often based on inherent or perceived differences such as ethnicity, race, religion, or nationality. While the act of categorizing people is a natural human tendency, it becomes dangerous when these classifications are rigidified, imbued with negative stereotypes, and used to establish hierarchies of power and worth. This initial separation lays the groundwork for dehumanization and the justification of violence against the "other" group.</p>
             <p>The process of classification is often fueled by historical narratives, cultural biases, and political rhetoric that emphasize the differences between groups while downplaying shared humanity. Dominant groups may actively promote these divisions to maintain their power or to scapegoat minority groups for societal problems. Language plays a crucial role in this stage, as specific terms and labels are used to define and often denigrate the targeted group, creating a sense of inherent difference and otherness in the minds of the broader population.</p>
