--- a/preparation.html
+++ b/preparation.html
@@ -48,7 +48,7 @@
         </div>
         <div class="examples">
             <p>In the Holocaust They built concentration camps like Auschwitz.
-            <p>In  
+            <p>In The Rwandan Genocide😀 
             <p>e
         </div>
     </main>
