--- a/fake/classification.html
+++ b/fake/classification.html
@@ -31,7 +31,7 @@
     <br>
     <br>
     <main>
-        hi
+        <img src="stage1SS.png">
     </main>
     <footer>
         <p>Creator; DeJuan Cameron</p>
